# DogBone

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: Cache.cmake  CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  Path.cmake  Sanitizers.cmake  SharedConfig.cmake.in  StandardProjectSettings.cmake  StaticAnalyzers.cmake  StaticConfig.cmake.in  TargetAPI.h.in  Targets.cmake
custom_packages/imgui/: CMakeLists.txt  conanfile.py
custom_packages/imguizmo/: CMakeLists.txt  conanfile.py
lib/: CMakeLists.txt
lib/CE/: CE_API.h  CE_Archiver.cpp  CE_Archiver.h  CE_Asset.cpp  CE_Asset.h  CE_GLFWHelpers.cpp  CE_GLFWHelpers.h  CE_HotKeyManager.cpp  CE_HotKeyManager.h  CE_Input.cpp  CE_Input.h  CMakeLists.txt
lib/DBE/: CMakeLists.txt  DBE_API.h  DBE_ConsoleWindow.cpp  DBE_ConsoleWindow.h  DBE_Editor.cpp  DBE_Editor.h  DBE_EditorIMGUIContext.cpp  DBE_EditorIMGUIContext.h  DBE_HierarchyWindow.cpp  DBE_HierarchyWindow.h  DBE_Inspector.cpp  DBE_Inspector.h  DBE_SceneWindow.cpp  DBE_SceneWindow.h
lib/DBS/: CMakeLists.txt  DBS_API.h  DBS_NativeScriptComponent.cpp  DBS_NativeScriptComponent.h  DBS_NativeScriptSystem.cpp  DBS_NativeScriptSystem.h  DBS_ScriptableEntity.cpp  DBS_ScriptableEntity.h
lib/GR/: CMakeLists.txt  GR_API.h  GR_Camera.cpp  GR_Camera.h  GR_Color.cpp  GR_Color.h  GR_DesktopWindow.cpp  GR_DesktopWindow.h  GR_Framebuffer.cpp  GR_Framebuffer.h  GR_OpenGLFramebuffer.cpp  GR_OpenGLFramebuffer.h  GR_OpenGLRenderBuffer.cpp  GR_OpenGLRenderBuffer.h  GR_OpenGLRenderer.cpp  GR_OpenGLRenderer.h  GR_OpenGLShader.cpp  GR_OpenGLShader.h  (+22 more)
(+110 files in other folders)
